[conluz-125] Configured BaseIntegrationTest to run an influxdb core 3 container. Removed duplicity on beans with influx and influx3, removing the ones for influx 1.8. Added exclusion with JVM args for Apache Arrow